UPdate integration tests